tests/NormalTests/paczka1/fuzzy1/38822802.err
Error in line 1: TS6ZSaXAG8 S445 73,39
Error in line 17: eto3HCBBa S445 3,1
Error in line 28: S445 S445 -6,3
Error in line 6: TS6ZSaXAG8 S445 127,8
Error in line 25: oi0 S247 84,4
Error in line 21: 7ZpP8Rl S21 108,8
Error in line 38: 7ZpP8Rl A293 31,4
